--- a/.github/workflows/main_pcp-backend.yml
+++ b/.github/workflows/main_pcp-backend.yml
@@ -61,6 +61,6 @@ jobs:
         uses: azure/webapps-deploy@v3
         with:
           app-name: 'PCP-Backend'
-          slot-name: 'Production'
-          package: .
+          package: backend
+
           
