--- a/.github/workflows/main_pcp-backend.yml
+++ b/.github/workflows/main_pcp-backend.yml
@@ -24,47 +24,53 @@ jobs:
 
     steps:
       - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
+        uses: actions/setup-dotnet@v3
+        with:
         dotnet-version: 8.0.x
 
-    - name: Restore dependencies
-      run: dotnet restore backend/Project-Collaboration-Portal.csproj
+      - name: Restore dependencies
+        run: dotnet restore backend/Project-Collaboration-Portal.csproj
 
-    - name: Build project
-      run: dotnet build backend/Project-Collaboration-Portal.csproj --configuration Release
+      - name: Build project
+        run: dotnet build backend/Project-Collaboration-Portal.csproj --configuration Release
 
-    - name: Publish project
-      run: dotnet publish backend/Project-Collaboration-Portal.csproj --configuration Release --output ./publish
+      - name: Publish project
+        run: dotnet publish backend/Project-Collaboration-Portal.csproj --configuration Release --output ./publish
+
+      - name: 'Deploy to Azure Web App'
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: PCP-Backend
+          package: ./publish
 
 
-    - name: Checkout repository
-      uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup .NET Core
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: ${{ env.DOTNET_VERSION }}
+      - name: Setup .NET Core
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: ${{ env.DOTNET_VERSION }}
 
-    - name: Build with dotnet
-      working-directory: backend
-      run: |
-        dotnet restore
-        dotnet build --configuration Release --no-restore
+      - name: Build with dotnet
+        working-directory: backend
+        run: |
+         dotnet restore
+         dotnet build --configuration Release --no-restore
 
-    - name: Run tests (optional)
-      working-directory: backend
-      run: |
-        dotnet test --configuration Release --no-build --verbosity normal
+      - name: Run tests (optional)
+        working-directory: backend
+        run: |
+          dotnet test --configuration Release --no-build --verbosity normal
 
-    - name: Publish with dotnet
-      working-directory: backend
-      run: |
-        dotnet publish --configuration Release --output ${{ github.workspace }}/${{ env.AZURE_WEBAPP_PACKAGE_PATH }} --no-build
+      - name: Publish with dotnet
+        working-directory: backend
+        run: |
+          dotnet publish --configuration Release --output ${{ github.workspace }}/${{ env.AZURE_WEBAPP_PACKAGE_PATH }} --no-build
 
-    - name: Deploy to Azure Web App
-      uses: azure/webapps-deploy@v2
-      with:
-        app-name: ${{ env.AZURE_WEBAPP_NAME }}
-        package: ${{ github.workspace }}/${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
-        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+      - name: Deploy to Azure Web App
+        uses: azure/webapps-deploy@v2
+        with:
+          app-name: ${{ env.AZURE_WEBAPP_NAME }}
+          package: ${{ github.workspace }}/${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+          publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
