--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "http://localhost:5000"
+    "DefaultConnection": "https://pcp-backend.azurewebsites.net"
   }
 }
