--- a/.github/workflows/main_pcp-backend.yml
+++ b/.github/workflows/main_pcp-backend.yml
@@ -30,7 +30,7 @@ jobs:
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v4
         with:
-          name: pcp-app
+          name: ASP-app
           path: '/published/**'
 
   deploy:
@@ -41,7 +41,7 @@ jobs:
       - name: Download artifact from build job
         uses: actions/download-artifact@v4
         with:
-          name: pcp-app
+          name: ASP-app
           merge-multiple: false
           repository: RohannNWU/Project-Collaboration-Portal
           run-id: 16990543176
