Added MongoDB connection

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MongoDB": "mongodb+srv://PCP-admin:Group15-PCP!@pcp-database.gor4oyq.mongodb.net/?retryWrites=true&w=majority&appName=PCP-Database"
+  },
   "AllowedHosts": "*"
 }
