tried to fix DB conn

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,8 +5,22 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+
+  "AllowedHosts": "*",
+
   "ConnectionStrings": {
-    "MongoDB": "mongodb+srv://PCP-admin:Group15-PCP!@pcp-database.gor4oyq.mongodb.net/?retryWrites=true&w=majority&appName=PCP-Database"
+    "MongoDB": "mongodb+srv://<username>:<password>@<cluster-url>/<database-name>?retryWrites=true&w=majority"
   },
-  "AllowedHosts": "*"
+
+  "MongoDbSettings": {
+    "DatabaseName": "PCP",
+    "UsersCollectionName": "User"
+  },
+
+  "Jwt": {
+    "Key": "a7f9d2e8c4b6h3j9k1m5n8p2q7r4s6t9",
+    "Issuer": "PCP-Backend",
+    "Audience": "PCP-Frontend",
+    "ExpiresHours": 8
+  }
 }
