--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -9,7 +9,8 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "MongoDB": "mongodb+srv://<username>:<password>@<cluster-url>/<database-name>?retryWrites=true&w=majority"
+    "MongoDB": "mongodb+srv://PCP-admin:Group15-PCP!@pcp-database.gor4oyq.mongodb.net/?retryWrites=true&w=majority&appName=PCP-Database"
+    
   },
 
   "MongoDbSettings": {
