fixed backend comms

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -20,8 +20,8 @@
 
   "Jwt": {
     "Key": "a7f9d2e8c4b6h3j9k1m5n8p2q7r4s6t9",
-    "Issuer": "PCP-Backend",
-    "Audience": "PCP-Frontend",
+    "Issuer": "https://pcp-backend.azurewebsites.net",
+    "Audience": "https://wonderful-coast-0409a4c03.2.azurestaticapps.net",
     "ExpiresHours": 8
   }
 }
