--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -5,23 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "MongoDB": "mongodb+srv://PCP-admin:Group15-PCP!@pcp-database.gor4oyq.mongodb.net/?retryWrites=true&w=majority&appName=PCP-Database"
-    
+    "MongoDb": "mongodb+srv://PCP-admin:Group15-PCP!@pcp-database.gor4oyq.mongodb.net/"
   },
-
-  "MongoDbSettings": {
-    "DatabaseName": "PCP",
-    "UsersCollectionName": "User"
-  },
-
-  "Jwt": {
-    "Key": "a7f9d2e8c4b6h3j9k1m5n8p2q7r4s6t9",
-    "Issuer": "https://pcp-backend.azurewebsites.net",
-    "Audience": "https://wonderful-coast-0409a4c03.2.azurestaticapps.net",
-    "ExpiresHours": 8
-  }
+  "DatabaseName": "PCP"
 }
