--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
 
   "ConnectionStrings": {
-    "MongoDb": "mongodb+srv://PCP-admin:Group15-PCP!@pcp-database.gor4oyq.mongodb.net/?retryWrites=true&w=majority&appName=PCP-Database"
+    "MongoDb": "mongodb+srv://PCP-admin:Group15-PCP%21@pcp-database.gor4oyq.mongodb.net/?retryWrites=true&w=majority&appName=PCP-Database"
   },
   "DatabaseName": "PCP"
 }
